--- a/cms.html
+++ b/cms.html
@@ -185,7 +185,7 @@
 
   <div class="row shadow quote-row">
   <div class="quote-wrapper">
-    <p class="card-header text-center">Quote of the Day</p>
+    <p class="card-header text-center">Quote of the Week</p>
     <blockquote>Dreams and Dedication are a really powerful combination</blockquote>
     <div class="row">
     <div class="col-md-6 col-md-offset-3">
@@ -200,7 +200,6 @@
 <div class="row shadow notable-alumni-wrap">
   <div class="col-md-12">
     <h2 class="parallax-text text-center">Notable Alumni</h2>
-    <img src="img/notable.png" class="img-responsive notable-img"/>
     <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <hr>
@@ -303,7 +302,7 @@
           <hr>
         </div>
       </div> 
-      <div class="event-description-text text-center">
+      <div class="event-description-text">
 The Alumni cell shall have the following broadly identified objectives:
 <ul style="list-style-type:square">
 <li>To establish and maintain contact with Alumni.</li>
@@ -412,38 +411,453 @@ I appreciate the efforts of our vibrant Training and Placement cell and all its 
               <table class="table table-striped">
                     <thead>
                       <tr>
-                         <th>S. No.</th>
-                         <th>Name</th>
-                         <th>Graduation Year</th>
-                         <th>Degree</th>
-                         <th>Department</th>
-                         <th>Present Organisation</th>
+                         <th>Year Of Passing</th>
+                         <th>UG</th>
+                         <th colspan="2">PG</th>
+                         <th>PhD</th>
+                         <th>Total</th>
+                      </tr>
+                      <tr>
+                        <th></th>
+                        <th>B.E./B.Tech</th>
+                        <th colspan="1">M.Tech</th>
+                        <th colspan="1">MCA/MBA/MSc/Others</th>
+                        <th></th>
+                        <th></th>
                       </tr>
                    </thead>
                    <tbody>
                       <tr>
-                         <td>1</td>
-                         <td>John Appleseed</td>
-                         <td>1965</td>
-                         <td>B.Tech</td>
-                         <td>Computer Science and Engineering</td>
-                         <td>Google</td>
+                        <td>1965</td>
+                        <td>160</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>160</td>
                       </tr>
                       <tr>
-                         <td>1</td>
-                         <td>John Appleseed</td>
-                         <td>1965</td>
-                         <td>B.Tech</td>
-                         <td>Computer Science and Engineering</td>
-                         <td>Google</td>
+                        <td>1966</td>
+                        <td>180</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>180</td>
                       </tr>
                       <tr>
-                         <td>1</td>
-                         <td>John Appleseed</td>
-                         <td>1965</td>
-                         <td>B.Tech</td>
-                         <td>Computer Science and Engineering</td>
-                         <td>Google</td>
+                        <td>1967</td>
+                        <td>180</td>
+                        <td>15</td>
+                        <td></td>
+                        <td></td>
+                        <td>195</td>
+                      </tr>
+                      <tr>
+                        <td>1968</td>
+                        <td>210</td>
+                        <td>25</td>
+                        <td></td>
+                        <td></td>
+                        <td>235</td>
+                      </tr>
+                      <tr>
+                        <td>1969</td>
+                        <td>210</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>260</td>
+                      </tr>
+                      <tr>
+                        <td>1970</td>
+                        <td>210</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>260</td>
+                      </tr>
+                      <tr>
+                        <td>1971</td>
+                        <td>210</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>260</td>
+                      </tr>
+                      <tr>
+                        <td>1972</td>
+                        <td>210</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>260</td>
+                      </tr>
+                      <tr>
+                        <td>1967</td>
+                        <td>180</td>
+                        <td>15</td>
+                        <td></td>
+                        <td></td>
+                        <td>195</td>
+                      </tr>
+                      <tr>
+                        <td>1973</td>
+                        <td>210</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>260</td>
+                      </tr>
+                      <tr>
+                        <td>1974</td>
+                        <td>210</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>260</td>
+                      </tr>
+                      <tr>
+                        <td>1975</td>
+                        <td>210</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>260</td>
+                      </tr>
+                      <tr>
+                        <td>1976</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1977</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1978</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1979</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1980</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1981</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1982</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1983</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1984</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1985</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1986</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1987</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1988</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1989</td>
+                        <td>250</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>300</td>
+                      </tr>
+                      <tr>
+                        <td>1990</td>
+                        <td>310</td>
+                        <td>50</td>
+                        <td></td>
+                        <td></td>
+                        <td>360</td>
+                      </tr>
+                      <tr>
+                        <td>1991</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>265</td>
+                      </tr>
+                      <tr>
+                        <td>1992</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>365</td>
+                      </tr>
+                      <tr>
+                        <td>1993</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>365</td>
+                      </tr>
+                      <tr>
+                        <td>1994</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>365</td>
+                      </tr>
+                      <tr>
+                        <td>1995</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>365</td>
+                      </tr>
+                      <tr>
+                        <td>1996</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>365</td>
+                      </tr>
+                      <tr>
+                        <td>1997</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>365</td>
+                      </tr>
+                      <tr>
+                        <td>1998</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>365</td>
+                      </tr>
+                      <tr>
+                        <td>1999</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>365</td>
+                      </tr>
+                      <tr>
+                        <td>2000</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>365</td>
+                      </tr>
+                      <tr>
+                        <td>2001</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td></td>
+                        <td></td>
+                        <td>365</td>
+                      </tr>
+                      <tr>
+                        <td>2002</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td>55</td>
+                        <td></td>
+                        <td>420</td>
+                      </tr>
+                      <tr>
+                        <td>2003</td>
+                        <td>310</td>
+                        <td>55</td>
+                        <td>55</td>
+                        <td></td>
+                        <td>420</td>
+                      </tr>
+                      <tr>
+                        <td>2004</td>
+                        <td>350</td>
+                        <td>55</td>
+                        <td>115</td>
+                        <td>10</td>
+                        <td>530</td>
+                      </tr>
+                      <tr>
+                        <td>2005</td>
+                        <td>400</td>
+                        <td>55</td>
+                        <td>115</td>
+                        <td>10</td>
+                        <td>580</td>
+                      </tr>
+                      <tr>
+                        <td>2006</td>
+                        <td>450</td>
+                        <td>55</td>
+                        <td>115</td>
+                        <td>10</td>
+                        <td>630</td>
+                      </tr>
+                      <tr>
+                        <td>2007</td>
+                        <td>450</td>
+                        <td>125</td>
+                        <td>115</td>
+                        <td>10</td>
+                        <td>700</td>
+                      </tr>
+                      <tr>
+                        <td>2008</td>
+                        <td>500</td>
+                        <td>125</td>
+                        <td>115</td>
+                        <td>10</td>
+                        <td>750</td>
+                      </tr>
+                      <tr>
+                        <td>2009</td>
+                        <td>550</td>
+                        <td>125</td>
+                        <td>115</td>
+                        <td>25</td>
+                        <td>815</td>
+                      </tr>
+                      <tr>
+                        <td>2010</td>
+                        <td>600</td>
+                        <td>125</td>
+                        <td>115</td>
+                        <td>25</td>
+                        <td>865</td>
+                      </tr>
+                      <tr>
+                        <td>2011</td>
+                        <td>650</td>
+                        <td>125</td>
+                        <td>115</td>
+                        <td>25</td>
+                        <td>915</td>
+                      </tr>
+                      <tr>
+                        <td>2012</td>
+                        <td>700</td>
+                        <td>125</td>
+                        <td>115</td>
+                        <td>25</td>
+                        <td>965</td>
+                      </tr>
+                      <tr>
+                        <td>2013</td>
+                        <td>750</td>
+                        <td>125</td>
+                        <td>115</td>
+                        <td>40</td>
+                        <td>1030</td>
+                      </tr>
+                      <tr>
+                        <td>2014</td>
+                        <td>800</td>
+                        <td>450</td>
+                        <td>115</td>
+                        <td>40</td>
+                        <td>1405</td>
+                      </tr>
+                      <tr>
+                        <td>2015</td>
+                        <td>850</td>
+                        <td>450</td>
+                        <td>115</td>
+                        <td>40</td>
+                        <td>1455</td>
+                      </tr>
+                      <tr>
+                        <td>2016</td>
+                        <td>900</td>
+                        <td>450</td>
+                        <td>115</td>
+                        <td>65</td>
+                        <td>1530</td>
+                      </tr>
+                      <tr>
+                        <td>2017</td>
+                        <td>950</td>
+                        <td>450</td>
+                        <td>115</td>
+                        <td>60</td>
+                        <td>1580</td>
                       </tr>
                    </tbody>
               </table>
