--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="primary-header-text col-md-5">
             <h3 class="primary-text">
                 National Institute of Technology Durgapur
+                <p class="sub-header">(An Institute of National Importance under Government of India, Ministry of Human Resource Development).</p>
             </h3>
             </div>
             <div class="secondary-header-text col-md-4">
