--- a/cms.html
+++ b/cms.html
@@ -8,26 +8,26 @@
             <ul class="event-list">
               <li class="event">
                 <div class="event-date text-center">
-                  26<sup>th</sup> August, 2017
+                  04<sup>th</sup> March, 2017
                 </div>
                 <div class="event-text text-center">
-                  Event 1
+                  Beyond The Walls Lecture #7 by Prof. Surjya Kumar Maiti
                 </div>
               </li>
               <li class="event">
                 <div class="event-date text-center">
-                  26<sup>th</sup> August, 2017
+                  23<sup>th</sup> January, 2017
                 </div>
                 <div class="event-text text-center">
-                  Event 2
+                  Beyond The Walls Lecture #6 by Prof. Rathindra Nath Maity
                 </div>
               </li>
               <li class="event">
                 <div class="event-date text-center">
-                  26<sup>th</sup> August, 2017
+                  24<sup>th</sup> November, 2016
                 </div>
                 <div class="event-text text-center">
-                  Event 3
+                  Beyond The Walls Lecture #5 by  Prof. Alak Bandhopadhyay
                 </div>
               </li>
             </ul>
@@ -47,17 +47,12 @@
             <ul class="event-list">
               <li class="event">
                 <div class="links-text text-center">
-                  Event 1
+                  <a href="http://www.nitdgp.ac.in/all_pdf16/Office%20Order%20regarding%20alumni%20as%20an%20invitee%20member%20of%20the%20Senate..pdf"> Office Order Regarding Alumni</a>
                 </div>
               </li>
               <li class="event">
                 <div class="links-text text-center">
-                  Event 1
-                </div>
-              </li>
-              <li class="event">
-                <div class="links-text text-center">
-                  Event 3
+                  <a href="https://nitdgp.ac.in">Institute Website</a>
                 </div>
               </li>
             </ul>
@@ -87,7 +82,7 @@
     <div class="item active">
       <img src="img/Carousel1.jpg" class="carousel-images">
       <div class="carousel-caption">
-        <h3>Welcome to NIT Durgapur</h3>
+        <h3>Standing Strong Since 1965</h3>
       </div>
     </div>
 
@@ -101,14 +96,14 @@
     <div class="item">
       <img src="img/Carousel3.jpg" class="carousel-images">
       <div class="carousel-caption">
-        <h3></h3>
+        <h3>Welcome to NIT Durgapur</h3>
       </div>
     </div>
 
     <div class="item">
       <img src="img/IMG_7194.JPG" class="carousel-images">
       <div class="carousel-caption">
-        <h3>Alumni at Dhaka, Bangladesh</h3>
+        <h3>Alumni Meet at Dhaka, Bangladesh</h3>
       </div>
     </div>
 
@@ -186,7 +181,9 @@
   <div class="row shadow quote-row">
   <div class="quote-wrapper">
     <p class="card-header text-center">Quote of the Week</p>
-    <blockquote>Dreams and Dedication are a really powerful combination</blockquote>
+    <blockquote>Nobody is bothered about an institution more than its alumni.
+               <br><br><cite>~ N R Narayan Murthy</cite>
+    </blockquote>
     <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <hr>
@@ -858,6 +855,14 @@ I appreciate the efforts of our vibrant Training and Placement cell and all its 
                         <td>115</td>
                         <td>60</td>
                         <td>1580</td>
+                      </tr>
+                      <tr>
+                        <td><b>Total</b></td>
+                        <td><b>18940</b></td>
+                        <td><b>4695</b></td>
+                        <td><b>1720</b></td>
+                        <td><b>400</b></td>
+                        <td><b>25755</b></td>
                       </tr>
                    </tbody>
               </table>
@@ -1972,7 +1977,7 @@ Mandal, both Assitant Professors of the department, were the Coordinators.
         </div>
       </div> 
       <div class="event-description-text text-center">
-          This group of enthusiastic pupils is third year B Tech undergraduates from various departments who have, in them, a willingness to give back to their alma mater, both as students and as alumni. Currently xx, the number of members is expected to go up in future with students from different years joining it. The primary task of the coordinators is to form a bridge between the former students and the Institute and subsequently, the students, via this Alumni Cell.
+          This group of enthusiastic pupils is third year B Tech undergraduates from various departments who have, in them, a willingness to give back to their alma mater, both as students and as alumni. Currently 12, the number of members is expected to go up in future with students from different years joining it. The primary task of the coordinators is to form a bridge between the former students and the Institute and subsequently, the students, via this Alumni Cell.
       </div> 
   </div>
 
