--- a/cms.html
+++ b/cms.html
@@ -82,7 +82,7 @@
     <div class="item active">
       <img src="img/Carousel1.jpg" class="carousel-images">
       <div class="carousel-caption">
-        <h3>Standing Strong Since 1965</h3>
+        <h3>Standing Strong Since 1960</h3>
       </div>
     </div>
 
@@ -1221,7 +1221,7 @@ I appreciate the efforts of our vibrant Training and Placement cell and all its 
 <div id="beyondthewallwrapper" class="row">
 
   <div class="event-description col-md-10 col-md-offset-1 shadow">
-      <p class="parallax-text text-center">Beyond The Wall Lecture Series</p>
+      <p class="parallax-text text-center">Beyond The Walls Lecture Series</p>
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <hr>
@@ -1344,7 +1344,16 @@ INAE Distinguished Professor, IISC Bangalore </h4>
         <h4 class="modal-title text-center">Beyond The Wall Lecture #7</h4>
       </div>
       <div class="modal-body">
-        <p>Trials and Tribulations in the life of a Researcher</p>
+        <p class="text-center"><b>Trials and Tribulations in the life of a Researcher</b></p>
+        <p class="text-center"><b>Prof. Surjya Kumar Maiti(1970, BE, ME)
+    G.K. Devarajulu Chair Professor, IIT Bombay</b></p>
+        <img class="img-responsive btw-modal-image" src="img/L7.JPG"/>
+An invited talk, which is a part of the lecture series Beyond the Walls, was
+jointly organised by Department of Mechanical Engineering, NIT Durgapur and
+NITDAA on March 04, 2017 at NIT Durgapur. The talk on Trials and
+Tribulations in the Life of a Researcher was delivered by Prof. S. K. Maiti, an
+eminent alumnus of the Institute and G K Devarajulu Chair Professor,
+Department of Mechanical Engineering, IIT Bombay.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -1360,7 +1369,15 @@ INAE Distinguished Professor, IISC Bangalore </h4>
         <h4 class="modal-title text-center">Beyond The Wall Lecture #6</h4>
       </div>
       <div class="modal-body">
-        <p>A tale of two Machines-Harmonic Drive & ORBIT Motor</p>
+        <p class="text-center"><b>A tale of two Machines-Harmonic Drive & ORBIT Motor</b></p>
+        <p class="text-center"><b>Prof. Rathindra Nath Maity(1974, BE, ME) Professor, IIT Kharagpur</b></p>
+        <img class="img-responsive btw-modal-image" src="img/L6.JPG"/>
+An invited talk, which is a part of the lecture series Beyond the Walls, was
+jointly organised by Department of Mechanical Engineering, NIT Durgapur and
+NITDAA on January 23, 2017 at NIT Durgapur. The talk was delivered by Prof.
+Rathindra Nath Maiti, an eminent alumnus of the Institute, Professor in
+Department of Mechanical Engineering, IIT Kharagpur and the topic was; A tale
+of two Machines-Harmonic Drive & ORBIT Motor;.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -1376,7 +1393,16 @@ INAE Distinguished Professor, IISC Bangalore </h4>
         <h4 class="modal-title text-center">Beyond The Wall Lecture #5</h4>
       </div>
       <div class="modal-body">
-        <p>Numerical Methods in Energy Harvesting</p>
+        <p class="text-center"><b>Numerical Methods in Energy Harvesting</b></p>
+        <p class="text-center"><b>Prof. Alak Bandhopadhyay(1985, BE, ME)
+    Professor, Alabama A&M University, USA<b></p>
+        <img class="img-responsive btw-modal-image" src="img/L5.JPG"/>
+        An invited talk, which is a part of the lecture series Beyond the Walls, was
+jointly organised by Department of Mechanical Engineering, NIT Durgapur and
+NITDAA on November 24, 2016 at NIT Durgapur. The talk was delivered by
+Alak Bandhopadhyay, an eminent alumnus of the Institute, Professor,
+Alabama A&M University, USA and the topic was Numerical Methods in
+Energy Harvesting.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
