--- a/cms.html
+++ b/cms.html
@@ -301,6 +301,8 @@
       </div> 
       <div class="event-description-text">
 The Alumni cell shall have the following broadly identified objectives:
+<br>
+<br>
 <ul style="list-style-type:square">
 <li>To establish and maintain contact with Alumni.</li>
 <li>To promote and strengthen engangement, research collaborations and consultancy relationships among students, Alumni and institute.</li>
@@ -2004,6 +2006,37 @@ Mandal, both Assitant Professors of the department, were the Coordinators.
       </div> 
       <div class="event-description-text text-center">
           This group of enthusiastic pupils is third year B Tech undergraduates from various departments who have, in them, a willingness to give back to their alma mater, both as students and as alumni. Currently 12, the number of members is expected to go up in future with students from different years joining it. The primary task of the coordinators is to form a bridge between the former students and the Institute and subsequently, the students, via this Alumni Cell.
+      </div> 
+  </div>
+
+</div>
+
+<div id="alumniserviceswrapper" class="row">
+
+  <div class="event-description col-md-10 col-md-offset-1 shadow">
+      <p class="parallax-text text-center">Alumni Services</p>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div> 
+      <div class="event-description-text">
+          <p>The Alumni cell is keen to help you connect with your alma mater, batchmates and other Alumni in every possible manner.</p>
+          <br>
+          <p>
+          The Alumni cell maintains a large database of the alumni spread across the globe. If you wish to seek help to connect to anyone in particular or a group, mail us at alumni@admin.nitdgp.ac.in.</p>
+          <br>
+          <p>
+          If you are working or run your own company, then you can be a part of yearly Placement and Summer Internship program run by the institute and provide an opportunity to students to be a part of your work culture. 
+          </p>
+          <br>
+          <p>
+          Your knowledge and skills can have a huge impact in building a vibrant and intellectual atmosphere at the institute. 
+          </p>
+          <br>
+          <p>
+          You can contribute towards it either by working as an adjunct faculty or giving guest lectures on topics of general interests.
+          </p>
       </div> 
   </div>
 
