--- a/cms.html
+++ b/cms.html
@@ -253,10 +253,10 @@
     </div>
     <div class="col-md-3">
       <div class="gallery shadow">
-  <a target="_blank" href="img/NOTABLE_5.JPG">
-    <img src="img/NOTABLE_5.JPG" width="300" height="200">
+  <a target="_blank" href="img/NOTABLE_9.JPG">
+    <img src="img/NOTABLE_9.JPG" width="300" height="200">
   </a>
-  <div class="desc">Mr. Jayanta Kumar Ghosh</div>
+  <div class="desc">Mr. Nilotpal Roy</div>
 </div>
     </div>
           <div class="col-md-3">
@@ -1703,7 +1703,7 @@ Mandal, both Assitant Professors of the department, were the Coordinators.
       <div class="col-md-6 col-md-offset-1">
         <h3><b>Mr. Jayanta Kumar Ghosh</b></h3>
         <h4>Batch of 1969, B.E., Department of Electrical Engineering.</h4>
-        <h4>CEO.</h4>
+        <h4>Managing Director, New Town Electric Supply Company Limited.</h4>
       </div>
       </div>
       <div class="modal-footer">
